--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta name="google-site-verification" content="3-7CLK6O0hk3MRN39yENfx2ne3FywOlUGNG6Ga0Y1yw" />
     <title>Ristorante Con Fusion</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width = device-width, initial-scale = 1, shrink-to-fit = no">
